fix(unity-bootstrap-theme): fix rounded corners on mobile modals

--- a/packages/unity-bootstrap-theme/src/css/cookie-consent.css
+++ b/packages/unity-bootstrap-theme/src/css/cookie-consent.css
@@ -220,6 +220,10 @@
     right: -20px;
   }
 
+  .cassie-cookie-module>.cassie-pre-banner {
+    border-radius: 0 !important;
+  }
+
 
   /* Mobile and other devices */
   /* Tablets */
